[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://textures/background.tres" type="Texture" id=2]
[ext_resource path="res://fonts/font.tres" type="Theme" id=3]

[node name="menu" type="Node"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 512, 384 )

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_top = 293.0
margin_right = 702.0
margin_bottom = 474.0
rect_min_size = Vector2( 380, 181 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 15
alignment = 0

[node name="btn_new_game" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BTN_NEW_GAME"
flat = false
align = 1

[node name="btn_hi_scores" type="Button" parent="CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 37.0
margin_right = 380.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BTN_HI_SCORES"
flat = false
align = 1

[node name="btn_options" type="Button" parent="CenterContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 380.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BTN_OPTIONS"
flat = false
align = 1

[node name="btn_quit" type="Button" parent="CenterContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 111.0
margin_right = 380.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BTN_QUIT"
flat = false
align = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_new_game" to="." method="_on_btn_new_game_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_hi_scores" to="." method="_on_btn_hi_scores_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_options" to="." method="_on_btn_options_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]


